[gd_scene load_steps=5 format=3 uid="uid://snjjhp8qrtyt"]

[ext_resource type="PackedScene" uid="uid://cumi1d556545g" path="res://Player/Scenes/inventory.tscn" id="1_d6nia"]
[ext_resource type="Script" path="res://Player/Scripts/inventory_window.gd" id="1_fkn6n"]
[ext_resource type="Script" path="res://Player/Scripts/inventory_interface.gd" id="1_p6u4y"]
[ext_resource type="PackedScene" uid="uid://dd57oaab58t2c" path="res://Player/Scenes/mouse_slot.tscn" id="2_1ldvp"]

[node name="inventory_window" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_p6u4y")

[node name="window" type="Window" parent="."]
title = "Inventory"
position = Vector2i(1000, 170)
visible = false
extend_to_title = true
script = ExtResource("1_fkn6n")

[node name="inventory" parent="window" instance=ExtResource("1_d6nia")]
anchors_preset = 6
anchor_left = 1.0
anchor_right = 1.0
offset_left = -2.0
offset_top = -1.0
offset_right = 0.0
offset_bottom = 1.0
grow_horizontal = 0

[node name="mouse_slot" parent="." instance=ExtResource("2_1ldvp")]

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="close_requested" from="window" to="." method="_on_window_close_requested"]
[connection signal="mouse_entered" from="window" to="." method="_on_window_mouse_entered"]
[connection signal="mouse_exited" from="window" to="." method="_on_window_mouse_exited"]
[connection signal="window_input" from="mouse_slot" to="mouse_slot" method="_on_gui_input"]
